audio/lvl_1/k8s/lvl1service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audio-redaction-service
spec:
  selector:
    app: audio-redaction
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
